# software-qe-agentic-flow

./: .env_example  .gitignore  README.md  crewai_flow.html  pyproject.toml
knowledge/: petstore_testdata.csv
schema/petstore/: openapi.json
src/software_qe_flow/: main.py
src/software_qe_flow/crews/api_testing_crew/: api_testing_crew.py
src/software_qe_flow/crews/api_testing_crew/config/: agents.yaml  tasks.yaml
src/software_qe_flow/crews/ui_testing_crew/: ui_testing_crew.py
src/software_qe_flow/crews/ui_testing_crew/config/: tasks.yaml
src/software_qe_flow/models/: api_tests_model.py
src/software_qe_flow/tools/: qe_tools.py
src/software_qe_flow/utils/: __init__.py
