[project]
name = "software_qe_flow"
version = "0.1.0"
description = "software-qe-flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
    "google-generativeai>=0.8.5",
]

[project.scripts]
kickoff = "software_qe_flow.main:kickoff"
plot = "software_qe_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
